# homey-energy-dongle-ws

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/scripts/: create_release_on_version_bump.py
.github/workflows/: ci.yml  publish-pypi.yml  release-on-version-bump.yml
scripts/: interactive_stream.py
src/homey_energy_dongle_ws/: __init__.py  client.py  constants.py  discovery.py  exceptions.py  models.py  parser.py  telegram_assembly.py
tests/: test_client_streams.py  test_client_transport.py  test_discovery.py  test_integration_live.py  test_package_imports.py  test_parser.py  test_service_instance_display_name.py  test_telegram_assembly.py
